Added Security Config and Filter to notification service